try fix ios background attachment with ngAfter on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,7 +8,7 @@
   background-position: center;
 }
 
-.ios-container {
+.mobile-container {
   background-attachment: unset !important;
   background-size: cover !important;
 }
